[metadata]
name = bigpyp
version = 0.1
summary = bigpyp - BigIP Load Balancer management library
description-file =
    README.md
author = John Dewey
author-email = jd265j@att.com
home-page = https://github.com/retr0h/bigpyp
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Administration
    Topic :: System :: Developer Tools

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    bigpyp
